--- a/index.html
+++ b/index.html
@@ -5,31 +5,165 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Phoenix ENT.</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
 </head>
 <body>
-    <div id="navbar">
-        <div class="logo">
-            <img src="./Images/logo.jpg" alt="logo">
-            <a href=""><h1>Phoenix ENT.</h1></a>
-        </div> 
-        <div class="nav-links">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="index.html">Services</a></li>
-                <li><a href="index.html">Projects</a></li>
-                <li><a href="index.html">About Us</a></li>
-                <li><a href="index.html">Contact Us</a></li>
-            </ul>
+        <div id="navbar">
+            <div class="logo">
+                <img src="./Images/logo.jpg" alt="Phoenix ENT. Logo">
+                <a href=""><h1>Phoenix ENT.</h1></a>
+            </div> 
+            <div class="nav-links">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="index.html">Services</a></li>
+                    <li><a href="index.html">Projects</a></li>
+                    <li><a href="index.html">About Us</a></li>
+                    <li><a href="index.html">Contact Us</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="landing-page" style="background-image: url(./Images/camels.jpg);"  >
+            <h1>Welcome to Phoenix ENT. <br> <span>Home Of Memories</span></h1>
+            <div class="Info">
+                <div>
+                    <p>Discover breathtaking destinations and create lifelong memories</p>
+                    <p> Phoenix ENT. is a tours and travels company situated in Hurlingham, Nairobi. We are committed in offering the ideal vacation package for all who want to take vacations and trips in Nairobi and Kenya at large.<br>Currently we only have offices in Nairobi but it is our plan to open other branches in the United Kingdom, Saudi Arabia, The United States of America and Norway. </P>
+                </div>
+                <button>BOOK WITH US</button>
+            </div>    
+        </div>
+    <div class="team">
+        <div id="know-us">
+            <h1>Our Team</h1>
+            <p>At Phoenix ENT, we have a dedicated team of travel enthusiasts who are passionate about creating exceptional experiences for our clients. Each member of our team brings a wealth of knowledge and expertise to ensure that your journey with us is nothing short of extraordinary.</p>        </div>
+        <div class="team-members">
+            <div id="member">
+                <img src="./Images/naruto.jpg" alt="Naruto"/>
+                <figcaption>Naruto, experienced security personel and tour guide.</figcaption>
+            </div>
+            <div id="member1">
+                <img src="./Images/Kakashi.jpg" alt="Kakashi">
+                <figcaption>Kakashi,vacation group team leader</figcaption>
+            </div>
+            <div id="member2">
+                <img src="./Images/hookage.jpg" alt="Hookage">
+                <figcaption>Hookage, Manager of operations.</figcaption>
+            </div>
         </div>
     </div>
-    <h1>Welcome to Phoenix ENT.</h1>
-    <div class="Info">
-        <div>
-            <P> Phoenix ENT. is a tours and travels company situated in Hurlingham, Nairobi. We are committed in offering the ideal vacation package for all who want to take vacations and trips in Nairobi and Kenya at large. Currently we only have offices in Nairobi but it is our plan to open other branches in the United Kingdom, Saudi Arabia, The United States of America and Norway. </P>
+    <div class="About">
+        <h1>About Us</h1>
+        <div id="us">
+            <div id="travel">
+
+                <img src="./Images/travel.jpg" alt="Travel the World">
+            </div>
+            <div id="travel-text">
+                <p>Welcome to Phoenix ENT, your gateway to unforgettable travel experiences. We are a premier tours and travel company dedicated to providing exceptional services and creating memorable adventures for our clients.</p>
+
+                <p>With a passion for exploration and a commitment to excellence, we curate a wide range of tour packages and itineraries that cater to various interests and preferences. Whether you're seeking a relaxing beach getaway, an adrenaline-pumping adventure, or a culturally enriching journey, we have the perfect trip for you.</p>
+
+                <p>At Phoenix ENT, we understand that every traveler is unique. Our team of experienced travel experts is dedicated to personalizing your travel experience, ensuring that each trip is tailored to your specific needs and desires. From handpicked accommodations to carefully crafted activities, we strive to exceed your expectations and make your dream vacation a reality.</p>
+
+                <p>With our extensive network of trusted partners and local guides, we take pride in offering immersive travel experiences that showcase the beauty, diversity, and hidden gems of each destination. We prioritize sustainability and responsible tourism, working closely with local communities to preserve the environment and support local economies.</p>
+
+                <p>Join us on an extraordinary journey and let Phoenix ENT be your companion in discovering the world's wonders. Whether you're a solo traveler, a couple, or a group of adventurers, we are here to make your travel dreams come true. Contact us today and let's embark on an unforgettable adventure together!</p>
+            </div>
         </div>
-        <div>
-            <img src="./Images/Tour-and-travel.jpg" alt="Tours and Travel"/>
+    </div>
+    <div id="cs">
+        <div class="Contact">
+            <h1>Contact Us Today</h1>
+            <div id="content">
+                <div id="us">
+                    <p>Connect with us today for bookings, enquiries and feedback at any time.</p>
+                    <h3>Location</h3>
+                    <p>Hurlingham, Nairobi.<br> Chaka Place <br> Nairobi 00100</p>
+                    <h3>Call Us</h3>
+                    <p>Phone: +254721444405</p>
+                    <h3>Email Us</h3>
+                    <p>Email: phoenixent@info.com </p>
+                    <h3>Open Hours</h3>
+                    <p> Weekdays: 8:00a.m. - 4:00p.m. <br> Saturday: 9:00a.m. - 2:00p.m. <br> We remain closed on Sundays.</p>
+                </div>
+                <div id="form">    
+                    <form >
+                        <label for="Name">Your Name</label>
+                        <input type="text" id="Name" placeholder="Name"><br>
+                        <label for="email">Your Email</label>
+                        <input type="email" id="email" placeholder="email"><br>
+                        <label for="subject">Subject</label>
+                        <input type="text" id="subject"><br>
+                        <label for="message">Your Message</label>
+                        <textarea  id="message" cols="50" rows="20"></textarea><br>
+                        <button>SUBMIT</button>
+                    </form>
+                </div>
+            </div>    
         </div>
+        <div id="socials">
+            <p>You can also contact us through our social media platforms.</p>
+            <i class="fa-brands fa-instagram" style="color: #ec9a3c;"></i>
+            <i class="fa-brands fa-twitter" style="color: #ec9a3c;"></i>
+            <i class="fa-brands fa-tiktok" style="color: #ec9a3c;"></i>
+        </div>   
+                      
+            <div class="newsletter">
+                <h1>Subscribe to our Newsletter</h1>
+                <p>Sign up for our newsletter to get the latest news and offers.</p>
+                <div id="letter">
+                    <div id="subscription">
+                        <form action="">
+                            <label for="Firstname">First Name</label>
+                            <input type="text" id="Firstname" placeholder="First Name"><br>
+                            <label for="Lastname">Last Name</label>
+                            <input type="text" id="Lastname" placeholder="Last Name"><br>
+                            <label for="Email">Email</label>
+                            <input type="email" id="Email" placeholder="Enter your email"><br>
+                            <input type="checkbox" id="checkbox">
+                            <label for="checkbox">Send me promotional emails.</label><br>
+                            <button>SEND</button>
+                        </form>
+                    </div>
+                    <div id="img">
+                        <img src="Images/contact.jpg" alt="newsletter">
+                    </div>
+                </div>
+            </div>      
+    </div>
+        <div>
+        <footer>
+            <div id="foot">
+                <div class="links">
+                    <h4>Get Started</h4>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="index.html">Services</a></li>
+                        <li><a href="index.html">Projects</a></li>
+                        <li><a href="index.html">About Us</a></li>
+                        <li><a href="index.html">Contact Us</a></li>
+                    </ul>
+                </div>
+                <div class="socials">
+                    <h4>Follow Us</h4>
+                    <i class="fa-brands fa-instagram" style="color: #ec9a3c;"></i>
+                    <i class="fa-brands fa-twitter" style="color: #ec9a3c;"></i>
+                    <i class="fa-brands fa-tiktok" style="color: #ec9a3c;"></i>   
+                </div>    
+                <div class="res">
+                    <h4>Resources</h4>
+                    <ul>
+                        <li>FAQs</li>
+                        <li>Privacy Policy</li>
+                        <li>Destinations</li>
+                        <li>Vacation Packages</li>
+                        <li>Blog</li>
+                    </ul>
+                </div>
+            </div>
+            <p><i class="fa-regular fa-copyright"></i>2023 All Rights Reserved. | Designed by KIARIE.</p>
+        </footer>
     </div>
 </body>
 </html>
